@@ -16,7 +16,7 @@ use chacha20poly1305::{
 };
 use rand::{rngs::StdRng, Rng, SeedableRng};
 
-use crate::error::Error;
+use crate::{Error, Result};
 
 /// A type alias for magic number of the abcrypt encrypted data format.
 type MagicNumber = [u8; 7];
@@ -87,7 +87,7 @@ impl Header {
     }
 
     /// Parses `data` into the header.
-    pub fn parse(data: &[u8]) -> Result<Self, Error> {
+    pub fn parse(data: &[u8]) -> Result<Self> {
         if data.len() < Self::SIZE + <XChaCha20Poly1305 as AeadCore>::TagSize::USIZE {
             return Err(Error::InvalidLength);
         }
@@ -142,11 +142,7 @@ impl Header {
     }
 
     /// Verifies a BLAKE2b-512-MAC stored in this header.
-    pub fn verify_mac(
-        &mut self,
-        key: &Blake2bMac512Key,
-        tag: &Blake2bMac512Output,
-    ) -> Result<(), Error> {
+    pub fn verify_mac(&mut self, key: &Blake2bMac512Key, tag: &Blake2bMac512Output) -> Result<()> {
         let mut mac = Blake2bMac512::new(key);
         mac.update(&self.as_bytes()[..76]);
         mac.verify(tag).map_err(Error::InvalidHeaderMac)?;
