@@ -14,6 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/abcrypt-v0.1.0\...HEAD[Unreleased]
+
+=== Added
+
+* Add a specialized `Result` type for read and write operations for the abcrypt
+  encrypted data format ({pull-request-url}/21[#21])
+
 == {project-url}/releases/tag/abcrypt-v0.1.0[0.1.0] - 2023-08-25
 
 === Added
